stopped text wrap on resize

--- a/src/style.css
+++ b/src/style.css
@@ -182,6 +182,7 @@ table {
 #description {
   font-size: 38px;
   font-weight: 900;
+  white-space: nowrap;
 }
 
 #location {
@@ -239,6 +240,7 @@ select:focus {
   padding: 2px;
   grid-gap: 10px;
   text-align: left;
+
 }
 
 #detailsWrap {
@@ -248,6 +250,7 @@ select:focus {
   align-items: center;
   align-content: center;
   margin: 20px;
+  white-space: nowrap;
 }
 
 .forecastItem {
@@ -331,6 +334,8 @@ select:focus {
 
   .forecastItem {
     font-size: 22px;
+
+    
   }
 
   .weekDay {
@@ -343,9 +348,6 @@ select:focus {
 }
 
 @media only screen and (max-width: 650px) {
-  #content {
-    min-width: 550px;
-  }
 
   #description {
     font-size: 24px;
